<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TalentDonation</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="contents">Contents</string>
    <string name="title_activity_client_study">ClientStudy</string>
    <string name="title_activity_evaluation">EvaluationActivity</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="evaluation_title">이 수업을 평가해 주세요.</string>
    <string name="title_activity_waiting">WaitingActivity</string>
    <string name="teaching">Teaching</string>
    <string name="play">Play</string>
    <string name="onoff">student script on off</string>
    <string name="representation">표현 교육</string>
    
    <string-array name="guide_titles">
        <item >ice breaking(1분)</item>
        <item >listening(1분)</item>
        <item >표현 교육(2분)</item>
        <item >shadowing(1분)</item>
        <item >conversation(1분)</item>
        <item >good bye 인사(1분)</item>
    </string-array>
    
    <string-array name="guide_contents">
        <item >
간단한 인사를 합니다.\n
선생님의 이름부터 먼저 소개를 해 보세요.\n
학생의 이름도 물어봐 주세요.\n
아이들이 무엇을 좋아하는지, 요즘 어떻게 지내는지를 물어보세요.\n
학생이 좋은 관심을 받고 있다고 느껴지게끔 관심을 보인 반응해주세요.
		</item>
        <item >
아이들에게 다이얼로그를 들려줍니다.\n 
상황에 따라서 두 번 정도 들려줘도 괜찮습니다.\n
듣기가 끝나고 어떤 내용인지 물어보세요.            
        </item>
        <item >
아래와 같은 내용 위주로 표현을 교육해 주세요.\n
중심표현과 관련 표현을 함께 가르쳐 주세요.\n            
        </item>
        <item >
한 문장 씩 들으면 학생이 따라하게 하는 단계입니다.\n 
한 문장에 두 세 번 반복 해주도록 합니다.\n
* 학생에게 칭찬을 많이 해 주세요!            
        </item>
        <item >
A 와 B 역할을 나눠서 대화해 봅니다.\n 
서로 역할도 바꿔서 해보세요.\n
이 때 dialogue 에 이름이 나온다면 서로의 이름으로 바꾸어 해보세요.            
        </item>
        <item >
수업이 마치고 인사하는 단계입니다.\n
많이 칭찬해 주시고, 동기 부여가 될 수 있는 말들로 마무리 해주세요.\n            
        </item>
    </string-array>      
    
    <string name="step1_title">ice breaking(1분)</string>
    <string name="step1">
간단한 인사를 합니다.\n
선생님의 이름부터 먼저 소개를 해 보세요.\n
학생의 이름도 물어봐 주세요.\n
아이들이 무엇을 좋아하는지, 요즘 어떻게 지내는지를 물어보세요.\n
학생이 좋은 관심을 받고 있다고 느껴지게끔 관심을 보인 반응해주세요.
    </string>
    
    <string name="step2_title">listening(1분)</string>
    <string name="step2">
아이들에게 다이얼로그를 들려줍니다.\n 
상황에 따라서 두 번 정도 들려줘도 괜찮습니다.\n
듣기가 끝나고 어떤 내용인지 물어보세요.    
    </string>
    
    <string name="step3_title">표현 교육(2분)</string>
    <string name="step3">
아래와 같은 내용 위주로 표현을 교육해 주세요.\n
중심표현과 관련 표현을 함께 가르쳐 주세요.\n
    </string>
    
    <string name="step4_title">shadowing(1분)</string>
    <string name="step4">
한 문장 씩 들으면 학생이 따라하게 하는 단계입니다.\n 
한 문장에 두 세 번 반복 해주도록 합니다.\n
* 학생에게 칭찬을 많이 해 주세요!
    </string>
    
    <string name="step5_title">conversation(1분)</string>
    <string name="step5">
A 와 B 역할을 나눠서 대화해 봅니다.\n 
서로 역할도 바꿔서 해보세요.\n
이 때 dialogue 에 이름이 나온다면 서로의 이름으로 바꾸어 해보세요.        
    </string>
    
    <string name="step6_title">good bye 인사(1분)</string>
    <string name="step6">
수업이 마치고 인사하는 단계입니다.\n
많이 칭찬해 주시고, 동기 부여가 될 수 있는 말들로 마무리 해주세요.\n
    </string>
    
    
    
    <string name="representation_content">주요 표현을 가르쳐 줍니다.\n
How’s it going?은 안부를 묻는 표현입니다.\n
How are you? 라고도 말할 수 있어요.\n

관련 표현도 알려주세요.\n
A : How’s it going? // 잘 지내니?\n
B : Not too bad. Thanks. // 나쁘지 않아. 고마워\n
B : Not so good. // 별로 좋지 않아\n
\n
주요 표현과 관련 표현을 알려주면서 같이 따라 해 보게 유도해 주세요.\n
\n
학생이 모르는 단어가 있는지도 확인해 주세요.\n
\n\n </string>
    <string name="guideline">precedure (10분. 시간 배정은 하나의 예시이고 그 때 그 때 유도리 있게 하면 될 듯 합니다.)\n\n
1) ice breaking(1분) : 간단한 인사. 게임 만으로 되지 않을 경우를 생각해서..\n
\n\n
2) listening(1분) :\n 
선생님이 해당하는 다이얼로그를 들려준다.\n 
다이얼로그 분량이 줄어들었기 때문에 상황에 따라서 두 번 정도 들려줘도 좋을 것 같다.\n
처음 내용을 들려주고 어떤 내용인 것 같은지 물어볼 수도 있을 듯.\n
\n\n
3) 표현 교육(2분)\n
해당 다이얼로그에 대한 주요 표현을 컨텐츠에서 제공한다. 아래는 그 예시\n
How’s it going?은 안부를 묻는 표현입니다. How are you? 라고도 말할 수 있어요.\n
관련 표현\n
A : How’s it going? // 잘 지내니?\n
B : Not too bad. Thanks. // 나쁘지 않아. 고마워\n
B : Not so good. // 별로 좋지 않아\n
\n
주요 표현과 관련 표현을 알려주면서 같이 따라 해 보자고 유도할 수 있을 것 같다.\n
\n
이 part 에서는 학생이 모르는 단어가 있는지도 체크하는 것이 중요할 것 같다. 그래서 단어 뜻에 대한 설명도 해 주면 좋을 듯.\n
\n\n
4) shadowing(1분)\n
한 문장 씩 들려주면 학생이 따라하기. 한 문장에 세 번에서 네 번이면 적절할 듯.\n
학생과의 interaction 을 높이기 위해 \n
\n\n
5) 역할 분담 conversation(1분)\n
A 와 B 역할을 나눠서 따라하기. 서로 역할 바꿔 가면서 하면 될 것 같음.\n
이 때 dialogue 에 사람 이름이 나온다면 각자 본인의 이름으로 바꾸어서 해보는 것도 좋을 것 같음.\n
\n\n
6) good bye 인사(1분)\n
\n\n
7) 평가하기(1분)\n
학생의 수업 성취도를 평가한다.\n</string>
    <string name="tip">1. icebreaking tip\n
	- 선생님의 자기 소개로 시작.\n
		e.g) “안녕. 선생님 이름은 ~~ 야”\n
	- 학생에 대한 어느 정도 정보를 가지고 있어야 한다.\n
		e.g) 학생의 이름, 나이, 학교, 이전의 테스트 결과 등등\n
	- 학생이 처음에 소극적이기 때문에 선생님이 먼저 자신을 노출시키는 것이 중요하다\n
		e.g) “선생님은 몇 살로 보여?” (우리는 소리로만 진행되니까 음색을 통해 맞춰보라고 유도할 수 있음)\n
	- 질문 유도를 많이 한다. 이 때, yes 나 no 의 단답형 대답이 아닌 문장형 대답을 할 수 있는 질문을 던진다.\n
\n
2. 수업 마치고 헤어질 때\n
	- 격려와 수고의 말 많이 한다\n
		e.g) 오늘 참 잘했어! 앞으로 계속 이렇게 하면 실력 금방 늘거 같아!\n
\n
3. 소극적인 아이\n
	- 퀴즈나 수수께끼, 넌센스 문제를 준비한다.\n
	- 선생님이 스스로 분위기를 밝게 유도한다.\n
	- 주의할 점! : 학생이 말수가 적고 소극적이라서 분위기를 밝게 하려고 노력은 하겠지만 억지로 말을 하게 하려고 만들어서는 안된다.\n 
		e.g) 말을 좀 해봐바~! (너무 부담스럽지 않도록)\n
\n
4. 계속 놀려고 하는 아이.\n
	- 선생님이 분위기를 밝게 하려고, 혹은 친해지려고 퀴즈를 냈는데, 계속 퀴즈 내달라 하거나 딴 얘기 꺼내면서 공부 안하려는 경우\n
	- 이 때는 선생님이 수업 잘하면 끝나고 퀴즈 하나 더 내줄께. 혹은 너가 수업 잘 들으면 끝나고 더 재밌게 놀자는 식으로 노는 것을 뒤로 미루는 방법을 사용\n
\n
5. 학생의 기분이 우울해 보이는 날.\n
	- 음색의 분위기를 보고 학생이 우울하거나 힘없어 보일 수 있음\n
	- 대화를 유도.\n 
		e.g) ‘기분이 안 좋아 보이는데,, 무슨 일 있었니?’\n
		- 주의 사항 : 너무 깊게 캐물어서는 안된다. 특히, 자기 얘기를 안하려는 경우에는 그냥 분위기를 전환하는 것이 좋다.\n
		- 분위기 전환 : 다른 즐거운 얘기를 꺼내거나 간단한 퀴즈를 낸다.\n 
\n
6. 전반적인 tip\n
	- 칭찬과 격려의 말을 많이 해준다.\n
		e.g) 학생 : 저 공부 못하는데요?? 선생님 : 괜찮아. 이제 부터 열심히 하면 되지!\n
		e.g) 선생님 : ‘누가 너한테 못한다고 하면 그 말 믿지 마. 너 잘할 수 있어!’\n
		e.g) 선생님 : ‘자신감 가지구! 용기를 내서 한번 해보자!’\n
	- 선생님이 밝게 분위기를 주도해야지 결코 학생들에게 끌려다녀서는 안된다.\n
		e.g) 안좋은 대화 방식 : 선생님 : ‘아.. 너가 목소리가 힘이 없으니까 선생님도 힘이 없다..’\n
	- 선생님이 목소리가 너무 다운되거나 너무 붕 떠도 안됨. 차분하고 안정적으로!\n</string>
    <string name="ch1_1">Seho: Hi, Emily. How’s it going?\n</string>
    <string name="ch1_2">Emily: Not too bad. Thanks. How about you, Seho? \n</string>
    <string name="ch1_3">Seho: Not so good. I’m tired \n</string>
    <string name="ch1_1_ko">안녕, 에밀리. 잘 지내니?\n</string>
    <string name="ch1_2_ko">나쁘지 않아. 고마워. 세호, 너는 어때?\n</string>
    <string name="ch1_3_ko">별로 좋지 않아. 난 피곤해.\n</string>
    <string name="ch1">Seho: Hi, Emily. How’s it going?\n
안녕, 에밀리. 잘 지내니?\n\n
Emily: Not too bad. Thanks. How about you, Seho? \n
나쁘지 않아. 고마워. 세호, 너는 어때?\n\n
Seho: Not so good. I’m tired \n
별로 좋지 않아. 난 피곤해.\n</string>
    <string name="title_activity_script_loading">ScriptLoadingActivity</string>
    <string name="loading_title">가르칠 스크립트 내용</string>
    <string name="title_activity_teaching">TeachingActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="register">회원가입</string>
    <string name="name">이름</string>
    <string name="age">나이</string>
    <string name="email">Email</string>
    <string name="gender">성별</string>
    <string name="phone">전화번호</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="hint_name">홍길동</string>
    <string name="hint_age">13</string>
    <string name="hint_email">talent@donation.com</string>
    <string name="hint_phone">010-1004-1004</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="waitingTime">대기 시간 (분)</string>
    <string-array name="waitingMinutes">
        <item >5</item>
        <item >10</item>
        <item >15</item>
        <item >20</item>
        <item >25</item>
        <item >30</item>
        
    </string-array>
    <string name="next">다음 단계</string>
    <string name="bar_contents">Contents</string>
    <string name="bar_guideline">Guideline</string>

</resources>