<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:layout_margin="3dp">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    	<TextView
            android:id="@+id/tv_teaching"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/teaching" />    
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_gravity="right"
        android:paddingBottom="10sp">

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onoff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_1st_sentence"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ch1_1" />

        <TextView
            android:id="@+id/tv_2nd_sentence"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ch1_2" />

        <TextView
            android:id="@+id/tv_3rd_sentence"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ch1_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/representation" />
        
    </LinearLayout>

    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/representation_content" />
        
	</ScrollView>


</LinearLayout>