<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="0dp" >

    <TabHost
        android:id="@+id/waiting_tabhost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="3dp" >

                <ScrollView
                    android:id="@+id/sv_guideline"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
	                <TextView
	                    android:id="@+id/guidline"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/guideline" />
                </ScrollView>
                
                <ScrollView
                    android:id="@+id/sv_tip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
 					<TextView
	                    android:id="@+id/tip"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:text="@string/tip" />
                </ScrollView>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/waitingTime"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/probar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/sp_waiting_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/waitingMinutes"
            android:gravity="center"/>

        <Button
            android:id="@+id/bt_waiting_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm" />

    </LinearLayout>
</LinearLayout>